[gd_scene load_steps=30 format=3 uid="uid://qi8d554hg0pj"]

[ext_resource type="Script" path="res://player_ship/ship.gd" id="1_cvjpx"]
[ext_resource type="Texture2D" uid="uid://cyciqa2jpgckk" path="res://assets/ship.png" id="1_upn5s"]
[ext_resource type="Script" path="res://components/move_components.gd" id="2_s78ju"]
[ext_resource type="Texture2D" uid="uid://ccr2xf1jn8q4j" path="res://assets/ship_flame.png" id="3_iy370"]
[ext_resource type="Script" path="res://components/move_input_component.gd" id="3_olcxa"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="3_ydfu2"]
[ext_resource type="Script" path="res://components/move_stats.gd" id="4_kggkl"]
[ext_resource type="Script" path="res://components/position_clamp_component.gd" id="5_uq0mi"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="7_2sxg2"]
[ext_resource type="PackedScene" uid="uid://cin0e7ysl07u" path="res://lasers/laser.tscn" id="8_c8lfq"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="9_e2vnc"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="11_56hm8"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="12_211xl"]
[ext_resource type="PackedScene" uid="uid://u7v4mvvhbdro" path="res://effects/onetime_animated_effect.tscn" id="12_aowa6"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="13_7mykx"]
[ext_resource type="Script" path="res://components/variable_pitch_audio_stream_player.gd" id="16_2e78c"]
[ext_resource type="AudioStream" uid="uid://41c2fppnjnbt" path="res://sounds/laser_sound.wav" id="16_ty5o8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nejv7"]
atlas = ExtResource("3_iy370")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojdbe"]
atlas = ExtResource("3_iy370")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kacd2"]
atlas = ExtResource("3_iy370")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxl2f"]
atlas = ExtResource("3_iy370")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fthk"]
atlas = ExtResource("3_iy370")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ttuc"]
atlas = ExtResource("3_iy370")
region = Rect2(32, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8l2c7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nejv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojdbe")
}],
"loop": true,
"name": &"Center",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kacd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxl2f")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fthk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ttuc")
}],
"loop": true,
"name": &"bank_rigth",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_83l6k"]
atlas = ExtResource("1_upn5s")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6qv6"]
atlas = ExtResource("1_upn5s")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_phpi7"]
atlas = ExtResource("1_upn5s")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_i7gc7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83l6k")
}],
"loop": true,
"name": &"Center",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6qv6")
}],
"loop": true,
"name": &"bank left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_phpi7")
}],
"loop": true,
"name": &"bank rigth",
"speed": 5.0
}]

[sub_resource type="Resource" id="Resource_q0iie"]
script = ExtResource("4_kggkl")
speed = 100

[node name="Ship" type="Node2D"]
script = ExtResource("1_cvjpx")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("11_56hm8")

[node name="FlameAnimatedSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 15)
sprite_frames = SubResource("SpriteFrames_8l2c7")
animation = &"bank_rigth"
autoplay = "Center"

[node name="Anchor" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Anchor"]
sprite_frames = SubResource("SpriteFrames_i7gc7")
animation = &"Center"
autoplay = "Center"

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_s78ju")
actor = NodePath("..")

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("move_component")]
script = ExtResource("3_olcxa")
move_stats = SubResource("Resource_q0iie")
move_component = NodePath("../MoveComponent")

[node name="PositionClampComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_uq0mi")
actor = NodePath("..")

[node name="LeftCanon" type="Marker2D" parent="."]
position = Vector2(-5, -5)

[node name="RigthCanon" type="Marker2D" parent="."]
position = Vector2(5, -5)

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_2sxg2")
scene = ExtResource("8_c8lfq")

[node name="ExploSpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_2sxg2")
scene = ExtResource("12_aowa6")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("9_e2vnc")
sprite = NodePath("../Anchor")
scale_amount = Vector2(1.3, 1.3)

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_mask = 0
script = ExtResource("12_211xl")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtboxComponent"]
polygon = PackedVector2Array(-8, 2, -5, -4, -1, -7, 1, -7, 5, -4, 8, 2, 8, 4, 8, 4, 5, 6, -5, 6, -5, 6, -8, 4)

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("13_7mykx")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_component")]
script = ExtResource("3_ydfu2")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroy_effect_spawner_component = NodePath("../ExploSpawnerComponent")

[node name="VariablePitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_ty5o8")
script = ExtResource("16_2e78c")
